--- a/message.css
+++ b/message.css
@@ -1,16 +1,14 @@
-/* Style inputs with type="text", type="email"and textareas */
 input[type=text], input[type=email], textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */ 
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc; #Para ponerle el borde color gris
+  border-radius: 4px; #Para borde redondeado
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical; #para que se pueda modificar el tamaño de la caja del mensaje
 }
 
-/* Style the submit button with a specific background color etc */
 button[type=submit] {
   background-color: #04AA6D;
   color: white;
@@ -20,7 +18,6 @@ button[type=submit] {
   cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
 button[type=submit]:hover {
-  background-color: #45a049;
+  background-color: skyblue ;
 }
