--- a/message.css
+++ b/message.css
@@ -10,14 +10,10 @@ input[type=text], input[type=email], textarea {
 }
 
 button[type=submit] {
-  background-color: #04AA6D;
+  background-color: skyblue;
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-}
-
-button[type=submit]:hover {
-  #background-color: skyblue ;
 }
