--- a/upch.css
+++ b/upch.css
@@ -1,6 +1,8 @@
+#Código para insertar logo upch en la parte superior del menú
+
 [data-testid="stSidebar"] {
                 background-image: url(https://www.cayetano.edu.pe/cayetano/images/2018/Logo_Oficial.png);
-                background-size: 250px;
+                background-size: 250px; 
                 background-repeat: no-repeat;
                 background-position: 4px 20px;
             }
